# jsonplaceholder_rest_api

./: .gitignore  CMakeLists.txt  README.md  cl_options.cpp  cl_options.h  main.cpp  post.cpp  post.h  rest.cpp  rest.h  rest_entity.cpp  rest_entity.h  user.cpp  user.h
